styles/components/hero.css
.hero {
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 1rem;
  margin-top: 2rem;
}

.hero #particles-js {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
}

.hero__img {
  border-radius: 50%;
  width: 6rem;
  height: 6rem;
  z-index: 999;
}

.hero__subtitle {
  color: var(--clr-slate800);
  font-size: var(--size-base);
  line-height: 0.9;
  z-index: 999;
}

.hero__title {
  color: var(--clr-slate400);
  text-transform: uppercase;
  font-size: var(--size-4xl);
  letter-spacing: -0.05em;
  line-height: 0.9;
  z-index: 999;
}

.hero__description {
  max-width: 60ch;
  font-size: var(--size-sm);
  color: var(--clr-slate600);
  z-index: 999;
}

.hero__btn {
  text-transform: capitalize;
  font-size: var(--size-sm);
}

/* xs */
@media (min-width: 475px) {
  .hero {
    gap: 1.5rem;
  }

  .hero__img {
    width: 6.5rem;
    height: 6.5rem;
  }

  .hero__subtitle {
    font-size: var(--size-lg);
  }

  .hero__title {
    font-size: var(--size-5xl);
  }

  .hero__description {
    font-size: var(--size-base);
  }

  .hero__btn {
    font-size: var(--size-base);
  }
}

/* sm */
/* @media (min-width: 640px) {} */

/* md */
/* @media (min-width: 768px) {} */

/* lg */
@media (min-width: 1024px) {
  .hero__img {
    width: 8rem;
    height: 8rem;
  }

  .hero__subtitle {
    font-size: var(--size-2xl);
  }

  .hero__title {
    font-size: var(--size-7xl);
  }

  .hero__description {
    font-size: var(--size-lg);
  }

  .hero__btn {
    font-size: var(--size-lg);
  }
}

/* xl */
@media (min-width: 1280px) {
  .hero {
    gap: 2rem;
  }

  .hero__img {
    width: 10rem;
    height: 10rem;
  }

  .hero__subtitle {
    font-size: var(--size-4xl);
  }

  .hero__title {
    font-size: var(--size-9xl);
  }

  .hero__description {
    font-size: var(--size-xl);
  }

  .hero__btn {
    font-size: var(--size-xl);
  }
}

/* 2xl */
/* @media (min-width: 1536px) {} */

